# StoryTime

./: .env-example  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
db/: migration.sql
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: app.html  hooks.server.js
frontend/src/lib/: api.js
frontend/src/routes/: +layout.server.js  +page.svelte  Header.svelte  Nav.svelte
frontend/src/routes/confirmation/: +page.server.js  +page.svelte
frontend/src/routes/login/: +page.server.js  +page.svelte
frontend/src/routes/profile/settings/: +page.server.js  +page.svelte
frontend/src/routes/register/: +page.server.js  +page.svelte
frontend/src/routes/resend/: +page.server.js  +page.svelte
frontend/src/routes/snippet/: +page.server.js  +page.svelte  Editor.svelte
frontend/static/: main.css  manifest.json
markdown-vault/: General-Idea.md  Place-TODOs.md  VPS-TODOs.md  api.md
src/: error.rs  main.rs  user.rs
src/endpoints/: auth.rs  comments.rs  common.rs  email.rs  login.rs  mod.rs  notifications.rs  place.rs  profile.rs  profile_badges.rs  register.rs  story_snippet.rs
