[package]
name = "storytime-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argon2 = "0.5.2"
axum = { version = "0.6.20", features = ["macros", "http2"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["sqlx-postgres", "runtime-tokio", "uuid", "time", "postgres"] }
tokio = { version = "1.33.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["uuid", "cors", "tokio"] }
uuid = { version = "1.5.0", features = ["zerocopy", "v4"] }

[profile.release]
strip = true

[profile.production]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 2
strip = true
overflow-checks = false

# TODO: https://doc.rust-lang.org/rustc/profile-guided-optimization.html